--- a/app/globals.css
+++ b/app/globals.css
@@ -23,4 +23,63 @@
     border-bottom: 2px solid #007853;
     color: #007853;
 }
-  
+
+.slide-skill {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+
+.left, .right {
+    width: 35px;
+    height: 30px;
+    background-color: #007853;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
+
+.slide {
+    position: relative;
+    display: inline-block;
+    margin: 0 12px;
+   
+}
+
+.slide-image {
+    width: 300px;
+    height: 200px;
+    object-fit: cover; 
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.larger-slide {
+    transform: scale(1.2);
+}
+
+.slide::before {
+    content: ""; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #007853;
+    opacity: 0.5; 
+    z-index: 1; 
+}
+
+.slide span {
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white; 
+    font-size: 1.4rem; 
+    z-index: 2;
+    width: 100%;
+    text-align: center;
+} 
+
